--- a/compositors/hyprland/custom.conf
+++ b/compositors/hyprland/custom.conf
@@ -54,6 +54,9 @@ bind = $mainMod SHIFT, Q, exec, wlogout # Start wlogout
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition # Start IDE
 bind = $mainMod, F2, exec, spotify # Start Spotify
 
+# recordar cambiar la propiedad HandlePowerKey=ignore en /etc/systemd/logind.service y luego reinir systemd-logind.service 
+bind = , XF86PowerOff, exec, wlogout
+
 # monitor
 monitor=,1600x900@60,auto,1
 
@@ -67,12 +70,16 @@ env = AQ_DRM_DEVICES,/dev/dri/card1
 
 
 # reglas de ventana
-windowrule = fullscreen, ^(kitty)$
-windowrule = workspace[1], ^(kitty)$
-windowrule = workspace[2], ^(intellij-idea-ultimate-edition)$
-windowrule = workspace[8], ^(spotify)$
-
-
+#windowrule = fullscreen, ^(kitty)$
+windowrulev2 = workspace 1, class:^(kitty)$
+#windowrulev2 = workspace 2, class:^(?i).*.intellij.*
+#windowrulev2 = workspace 2, initialClass:^(?i).*.java.*
+windowrulev2 = workspace 3, class:^(google-chrome)$
+#windowrulev2 = workspace 4, class:.*brave.*
+#windowrulev2 = workspace 4, initialTitle:*Brave.*
+#windowrulev2 = workspace 5, class:^(nautilus)$
+windowrulev2 = workspace 8, class:^(spotify)$
+windowrulev2 = workspace 9, class:^(whatsdesk)$
 
 # layout
 general {
@@ -86,7 +93,17 @@ general {
 }
 
 master {
-    new_status = master
+    allow_small_split = false                 # Enable adding additional master windows in a horizontal split style
+    special_scale_factor = 1.0               # The scale of the special workspace windows. [0.0 - 1.0]
+    mfact = 0.5                              # The size as a percentage of the master window (e.g., 0.55 means 55% master, 45% slave)
+    new_status = master                        # New window status: master, slave, or inherit from focused window
+    new_on_top = false                        # Whether a newly opened window should be on the top of the stack
+    new_on_active = none                      # Placement of new window: before, after, or none
+    orientation = center                        # Default placement of the master area: left, right, top, bottom, or center
+    inherit_fullscreen = true                 # Inherit fullscreen status when cycling/swapping to another window
+    always_center_master = false              # Keep the master window centered when orientation=center and it's the only window
+    smart_resizing = true                     # Determine resizing direction based on mouse position on the window
+    drop_at_cursor = true                     # Place dragged/dropped windows at cursor position or stack top/bottom
 }
 
 bind = $mainMod, K, layoutmsg, swapwithmaster master
