--- a/compositors/hyprland/custom.conf
+++ b/compositors/hyprland/custom.conf
@@ -53,6 +53,13 @@ bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod SHIFT, Q, exec, wlogout # Start wlogout
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition # Start IDE
 bind = $mainMod, F2, exec, spotify # Start Spotify
+bind = $mainMod, M, fullscreen, 1
+bind = $mainMod, C, centerwindow
+bind = $mainMod, J, cyclenext
+bind = $mainMod, ESC, exit
+bind = $mainMod, R, forcerendererreload
+unbind = $mainMod SHIFT, Q
+bind = $mainMod SHIFT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| xargs kill
 
 # recordar cambiar la propiedad HandlePowerKey=ignore en /etc/systemd/logind.service y luego reinir systemd-logind.service 
 bind = , XF86PowerOff, exec, wlogout
@@ -95,11 +102,11 @@ general {
 master {
     allow_small_split = false                 # Enable adding additional master windows in a horizontal split style
     special_scale_factor = 1.0               # The scale of the special workspace windows. [0.0 - 1.0]
-    mfact = 0.5                              # The size as a percentage of the master window (e.g., 0.55 means 55% master, 45% slave)
+    mfact = 0.7                              # The size as a percentage of the master window (e.g., 0.55 means 55% master, 45% slave)
     new_status = master                        # New window status: master, slave, or inherit from focused window
     new_on_top = false                        # Whether a newly opened window should be on the top of the stack
     new_on_active = none                      # Placement of new window: before, after, or none
-    orientation = center                        # Default placement of the master area: left, right, top, bottom, or center
+    orientation = left                        # Default placement of the master area: left, right, top, bottom, or center
     inherit_fullscreen = true                 # Inherit fullscreen status when cycling/swapping to another window
     always_center_master = false              # Keep the master window centered when orientation=center and it's the only window
     smart_resizing = true                     # Determine resizing direction based on mouse position on the window
