--- a/compositors/hyprland/custom.conf
+++ b/compositors/hyprland/custom.conf
@@ -55,9 +55,10 @@ bind = $mainMod, F1, exec, intellij-idea-ultimate-edition # Start IDE
 bind = $mainMod, F2, exec, spotify # Start Spotify
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, C, centerwindow
-bind = $mainMod, J, cyclenext
+#bind = $mainMod, J, cyclenext
 bind = $mainMod, ESC, exit
-bind = $mainMod, R, forcerendererreload
+#bind = $mainMod, R, forcerendererreload
+bind = $mainMod, R, exec, hyprctl reload
 unbind = $mainMod SHIFT, Q
 bind = $mainMod SHIFT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| xargs kill
 
@@ -77,7 +78,7 @@ env = AQ_DRM_DEVICES,/dev/dri/card1
 
 
 # reglas de ventana
-#windowrule = fullscreen, ^(kitty)$
+windowrule = fullscreen, ^(kitty)$
 windowrulev2 = workspace 1, class:^(kitty)$
 #windowrulev2 = workspace 2, class:^(?i).*.intellij.*
 #windowrulev2 = workspace 2, initialClass:^(?i).*.java.*
@@ -87,6 +88,20 @@ windowrulev2 = workspace 3, class:^(google-chrome)$
 #windowrulev2 = workspace 5, class:^(nautilus)$
 windowrulev2 = workspace 8, class:^(spotify)$
 windowrulev2 = workspace 9, class:^(whatsdesk)$
+
+
+
+# reglas de workspace
+workspace = 1, layoutopt:orientation:center
+workspace = 1, name:terminal
+workspace = 1, defaultName:terminal
+workspace = 1, border:false
+workspace = 1, gapsin:0
+workspace = 1, gapsout:0
+workspace = 1, shadow:false
+workspace = 1, decorate:false
+workspace = 1, rounding:false
+
 
 # layout
 general {
@@ -99,17 +114,32 @@ general {
     resize_on_border = true
 }
 
+dwindle {
+    pseudotile = false                      # Enable pseudotiling: Pseudotiled windows retain their floating size when tiled.
+    force_split = 1                         # 0 -> Split follows mouse, 1 -> Always split to the left/top, 2 -> Always split to the right/bottom.
+    preserve_split = false                  # If enabled, the split (side/top) will not change regardless of what happens to the container.
+    smart_split = false                     # Allows precise control over split direction based on the cursor’s position (divides window into triangles).
+    smart_resizing = false                   # Resizing direction is determined by the mouse’s position on the window (nearest corner).
+    permanent_direction_override = false   # Makes the preselect direction persist until changed or reset.
+    special_scale_factor = 1               # Specifies the scale factor of windows on the special workspace [0 - 1].
+    split_width_multiplier = 1.0           # Specifies the auto-split width multiplier.
+    use_active_for_splits = false           # Whether to prefer the active window or the mouse position for splits.
+    default_split_ratio = 1.0              # The default split ratio on window open (1 means an even 50/50 split) [0.1 - 1.9].
+    split_bias = 1                         # Specifies which window receives the larger half of a split: 0 -> positional, 1 -> current, 2 -> opening.
+}
+
+
 master {
     allow_small_split = false                 # Enable adding additional master windows in a horizontal split style
     special_scale_factor = 1.0               # The scale of the special workspace windows. [0.0 - 1.0]
-    mfact = 0.7                              # The size as a percentage of the master window (e.g., 0.55 means 55% master, 45% slave)
-    new_status = master                        # New window status: master, slave, or inherit from focused window
+    mfact = 0.5                              # The size as a percentage of the master window (e.g., 0.55 means 55% master, 45% slave)
+    new_status = slave                        # New window status: master, slave, or inherit from focused window
     new_on_top = false                        # Whether a newly opened window should be on the top of the stack
     new_on_active = none                      # Placement of new window: before, after, or none
     orientation = left                        # Default placement of the master area: left, right, top, bottom, or center
     inherit_fullscreen = true                 # Inherit fullscreen status when cycling/swapping to another window
     always_center_master = false              # Keep the master window centered when orientation=center and it's the only window
-    smart_resizing = true                     # Determine resizing direction based on mouse position on the window
+    smart_resizing = false                     # Determine resizing direction based on mouse position on the window
     drop_at_cursor = true                     # Place dragged/dropped windows at cursor position or stack top/bottom
 }
 
@@ -130,4 +160,11 @@ group {
     col.border_inactive = 0x66777700          # Inactive group border color
     col.border_locked_active = 0x66ff5500     # Active locked group border color
     col.border_locked_inactive = 0x66775500   # Inactive locked group border color
+
 }
+
+
+
+# executions
+# instalar socat
+exec-once = /home/martin/.config/hypr/scripts/workspace_1_rules.sh & 
