--- a/compositors/hyprland/custom.conf
+++ b/compositors/hyprland/custom.conf
@@ -56,11 +56,12 @@ bind = $mainMod, F2, exec, spotify # Start Spotify
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, C, centerwindow
 #bind = $mainMod, J, cyclenext
-bind = $mainMod, ESC, exit
+bind = $mainMod, ESCAPE, exit
 #bind = $mainMod, R, forcerendererreload
 bind = $mainMod, R, exec, hyprctl reload
 unbind = $mainMod SHIFT, Q
 bind = $mainMod SHIFT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| xargs kill
+bind = $mainMod SHIFT, RETURN, exec, WGPU_BACKEND=gl warp-terminal
 
 # recordar cambiar la propiedad HandlePowerKey=ignore en /etc/systemd/logind.service y luego reinir systemd-logind.service 
 bind = , XF86PowerOff, exec, wlogout
@@ -78,15 +79,18 @@ env = AQ_DRM_DEVICES,/dev/dri/card1
 
 
 # reglas de ventana
-windowrule = fullscreen, ^(kitty)$
+#windowrule = fullscreen, ^(kitty)$
+windowrule = fullscreen, ^(whatsdesk)$
+
 windowrulev2 = workspace 1, class:^(kitty)$
-#windowrulev2 = workspace 2, class:^(?i).*.intellij.*
-#windowrulev2 = workspace 2, initialClass:^(?i).*.java.*
+windowrulev2 = workspace 2, class:^(jetbrains-idea)$
 windowrulev2 = workspace 3, class:^(google-chrome)$
+windowrulev2 = workspace 4, class:^(Brave-browser)$
+windowrulev2 = workspace 5, class:^(org.gnome.Nautilus)$
 #windowrulev2 = workspace 4, class:.*brave.*
 #windowrulev2 = workspace 4, initialTitle:*Brave.*
 #windowrulev2 = workspace 5, class:^(nautilus)$
-windowrulev2 = workspace 8, class:^(spotify)$
+windowrulev2 = workspace 8, class:^(Spotify)$
 windowrulev2 = workspace 9, class:^(whatsdesk)$
 
 
@@ -101,7 +105,18 @@ workspace = 1, gapsout:0
 workspace = 1, shadow:false
 workspace = 1, decorate:false
 workspace = 1, rounding:false
+workspace = 2, name:ide
+workspace = 2, defaultName:ide
 
+#workspace = 9, layoutopt:orientation:center
+workspace = 9, name:rrss
+workspace = 9, defaultName:rrss
+workspace = 9, border:false
+workspace = 9, gapsin:5
+workspace = 9, gapsout:5
+workspace = 9, shadow:false
+workspace = 9, decorate:false
+workspace = 9, rounding:false
 
 # layout
 general {
@@ -111,6 +126,7 @@ general {
     col.active_border = $color11
     col.inactive_border = rgba(ffffffff)
     layout = master
+    #layout = hy3
     resize_on_border = true
 }
 
@@ -145,6 +161,105 @@ master {
 
 bind = $mainMod, K, layoutmsg, swapwithmaster master
 
+plugin {
+  hy3 {
+    # disable gaps when only one window is onscreen
+    # 0 - always show gaps
+    # 1 - hide gaps with a single window onscreen
+    # 2 - 1 but also show the window border
+    no_gaps_when_only = 0 # default: 0
+
+    # policy controlling what happens when a node is removed from a group,
+    # leaving only a group
+    # 0 = remove the nested group
+    # 1 = keep the nested group
+    # 2 = keep the nested group only if its parent is a tab group
+    node_collapse_policy = 2 # default: 2
+
+    # offset from group split direction when only one window is in a group
+    group_inset = 10 # default: 10
+
+    # if a tab group will automatically be created for the first window spawned in a workspace
+    tab_first_window = false
+
+    # tab group settings
+    tabs {
+      # height of the tab bar
+      height = 15 # default: 15
+
+      # padding between the tab bar and its focused node
+      padding = 5 # default: 5
+
+      # the tab bar should animate in/out from the top instead of below the window
+      from_top = false # default: false
+
+      # rounding of tab bar corners
+      rounding = 3 # default: 3
+
+      # render the window title on the bar
+      render_text = true # default: true
+
+      # center the window title
+      text_center = false # default: false
+
+      # font to render the window title with
+      text_font = Sans # default: Sans
+
+      # height of the window title
+      text_height = 8 # default: 8
+
+      # left padding of the window title
+      text_padding = 3 # default: 3
+
+      # active tab bar segment color
+      col.active = 0xff32b4ff # default: 0xff32b4ff
+
+      # urgent tab bar segment color
+      col.urgent = 0xffff4f4f # default: 0xffff4f4f
+
+      # inactive tab bar segment color
+      col.inactive = 0x80808080 # default: 0x80808080
+
+      # active tab bar text color
+      col.text.active = 0xff000000 # default: 0xff000000
+
+      # urgent tab bar text color
+      col.text.urgent = 0xff000000 # default: 0xff000000
+
+      # inactive tab bar text color
+      col.text.inactive = 0xff000000 # default: 0xff000000
+    }
+
+    # autotiling settings
+    autotile {
+      # enable autotile
+      enable = false # default: false
+
+      # make autotile-created groups ephemeral
+      ephemeral_groups = true # default: true
+
+      # if a window would be squished smaller than this width, a vertical split will be created
+      # -1 = never automatically split vertically
+      # 0 = always automatically split vertically
+      # <number> = pixel width to split at
+      trigger_width = 0 # default: 0
+
+      # if a window would be squished smaller than this height, a horizontal split will be created
+      # -1 = never automatically split horizontally
+      # 0 = always automatically split horizontally
+      # <number> = pixel height to split at
+      trigger_height = 0 # default: 0
+
+      # a space or comma separated list of workspace ids where autotile should be enabled
+      # it's possible to create an exception rule by prefixing the definition with "not:"
+      # workspaces = 1,2 # autotiling will only be enabled on workspaces 1 and 2
+      # workspaces = not:1,2 # autotiling will be enabled on all workspaces except 1 and 2
+      workspaces = all # default: all
+    }
+  }
+}
+
+
 group {
     auto_group = false                         # Automatically group new windows into the focused unlocked group
     insert_after_current = true               # New windows in a group spawn after the current window
@@ -168,3 +283,52 @@ group {
 # executions
 # instalar socat
 exec-once = /home/martin/.config/hypr/scripts/workspace_1_rules.sh & 
+exec-once = hyprpm reload -n
+
+
+# plugins
+
+bind = $mainMod, W, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+
+plugin {
+    hyprexpo {
+        columns = 2
+        gap_size = 10
+        bg_col = rgb(000000)
+        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad
+        gesture_fingers = 3  # 3 or 4
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
+
+plugin {
+    hyprbars {
+        # example config
+        bar_height = 60
+
+        # example buttons (R -> L)
+        # hyprbars-button = color, size, on-click
+        hyprbars-button = rgb(ff4040), 10, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(eeee11), 10, , hyprctl dispatch fullscreen 1
+    }
+}
+
+plugin {
+    borders-plus-plus {
+        add_borders = 1 # 0 - 9
+
+        # you can add up to 9 borders
+        col.border_1 = rgb(ffffff)
+        col.border_2 = rgb(2222ff)
+
+        # -1 means "default" as in the one defined in general:border_size
+        border_size_1 = 10
+        border_size_2 = -1
+
+        # makes outer edges match rounding of the parent. Turn on / off to better understand. Default = on.
+        natural_rounding = yes
+    }
+}
