--- a/compositors/hyprland/custom.conf
+++ b/compositors/hyprland/custom.conf
@@ -66,6 +66,13 @@ bind = $mainMod SHIFT, RETURN, exec, WGPU_BACKEND=gl warp-terminal
 # recordar cambiar la propiedad HandlePowerKey=ignore en /etc/systemd/logind.service y luego reinir systemd-logind.service 
 bind = , XF86PowerOff, exec, wlogout
 
+unbind = $mainMod, Tab
+unbind = $mainMod SHIFT, Tab
+bind = $mainMod, Tab, movefocus, r
+unbind = $mainMod SHIFT, S
+bind = $mainMod, S, exec, $HYPRSCRIPTS/screenshot.sh # Take a screenshot
+
+
 # monitor
 monitor=,1600x900@60,auto,1
 
@@ -79,19 +86,18 @@ env = AQ_DRM_DEVICES,/dev/dri/card1
 
 
 # reglas de ventana
-#windowrule = fullscreen, ^(kitty)$
-windowrule = fullscreen, ^(whatsdesk)$
+#windowrulev2 = fullscreen, class:^(kitty)$
+windowrulev2 = fullscreen, class:^(whatsdesk)$
+windowrulev2 = maximize, class:^(jetbrains-idea)$
 
 windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 2, class:^(jetbrains-idea)$
 windowrulev2 = workspace 3, class:^(google-chrome)$
 windowrulev2 = workspace 4, class:^(Brave-browser)$
 windowrulev2 = workspace 5, class:^(org.gnome.Nautilus)$
-#windowrulev2 = workspace 4, class:.*brave.*
-#windowrulev2 = workspace 4, initialTitle:*Brave.*
-#windowrulev2 = workspace 5, class:^(nautilus)$
 windowrulev2 = workspace 8, class:^(Spotify)$
 windowrulev2 = workspace 9, class:^(whatsdesk)$
+windowrulev2 = noborder on, fullscreenstate:* 1
 
 
 
@@ -105,6 +111,7 @@ workspace = 1, gapsout:0
 workspace = 1, shadow:false
 workspace = 1, decorate:false
 workspace = 1, rounding:false
+
 workspace = 2, name:ide
 workspace = 2, defaultName:ide
 
