maximize all jetbrains ides

--- a/compositors/hyprland/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/hypr/conf/windowrules/default.conf
@@ -1,7 +1,7 @@
 # reglas de ventana
 #windowrulev2 = fullscreen, class:^(kitty)$
 windowrulev2 = fullscreen, class:^(whatsdesk)$
-windowrulev2 = maximize, class:^(jetbrains-idea)$
+windowrulev2 = maximize, class:^(jetbrains-.*)$
 
 windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 2, class:^(jetbrains-idea)$
