mas mejoras y cambios

--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -3,15 +3,15 @@
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^(kitty)$
 windowrulev2 = fullscreen, class:^(whatsdesk)$
-windowrulev2 = fullscreen, class:^(org.telegram.desktop)$
-windowrulev2 = fullscreen, class:^(Spotify)$
-windowrulev2 = fullscreen, class:^(Postman)$
+windowrulev2 = fullscreen, class:^(.*telegram.*)$
+windowrulev2 = fullscreen, class:^(.*spotify.*)$
+windowrulev2 = fullscreen, class:^(.*Postman.*)$
 
-windowrulev2 = maximize, class:^(google-chrome)$
-windowrulev2 = maximize, class:^(Brave)$
-windowrulev2 = maximize, class:^(jetbrains-.*)$
-windowrulev2 = maximize, class:^(codium)$
-windowrulev2 = maximize, class:^(org.gnome.Nautilus)$
+windowrulev2 = maximize, class:^(.*chrome.*)$
+windowrulev2 = maximize, class:^(Brave.*)$
+#windowrulev2 = maximize, class:^(jetbrains-.*)$
+windowrulev2 = maximize, class:^(.*codium)$
+windowrulev2 = maximize, class:^(.*Nautilus)$
 
 
 # workspace 1
@@ -60,7 +60,7 @@ windowrulev2 = workspace $WORKSPACE, class:^(org.telegram.desktop)$
 
 # workspace 10
 $WORKSPACE=10
-windowrulev2 = workspace $WORKSPACE, class:^(kitty)$
+#windowrulev2 = workspace $WORKSPACE, class:^(kitty)$
 
 
 
