--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -206,6 +206,7 @@ bind = $mainMod SHIFT, B, exec, brave
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, P, pin
+bind = $mainMod, T, togglefloating # Alternar entre flotante y en mosaico
 bind = $mainMod, C, centerwindow
 #bind = $mainMod, J, cyclenext
 bind = $mainMod, ESCAPE, exit
