--- a/compositors/hyprland/dotfiles/hypr/conf/windows/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windows/default.conf
@@ -6,6 +6,7 @@ general {
     col.active_border = $color11
     col.inactive_border = rgba(ffffffff)
     layout = master
+    #layout = dwindle
     #layout = hy3
     resize_on_border = true
 }
