fix script hyprland and add archlinux script

--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -8,6 +8,7 @@ windowrulev2 = fullscreen, class:^(Spotify)$
 windowrulev2 = fullscreen, class:^(Postman)$
 
 windowrulev2 = maximize, class:^(google-chrome)$
+windowrulev2 = maximize, class:^(Google-chrome)$
 windowrulev2 = maximize, class:^(Brave)$
 windowrulev2 = maximize, class:^(jetbrains-.*)$
 windowrulev2 = maximize, class:^(codium)$
@@ -31,6 +32,7 @@ windowrulev2 = workspace $WORKSPACE, class:^(Brave-browser)$
 # workspace 4
 $WORKSPACE=4
 windowrulev2 = workspace $WORKSPACE, class:^(google-chrome)$
+windowrulev2 = workspace $WORKSPACE, class:^(Google-chrome)$
 
 # workspace 5
 $WORKSPACE=5
