ajustes en workspace

--- a/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
@@ -2,4 +2,4 @@
 # instalar socat
 exec-once = /home/martin/.config/hypr/scripts/workspace_1_rules.sh &
 exec-once = hyprpm reload -n
-exec = sh ~/.config/hypr/scripts/hyprshade.sh
+#exec = sh ~/.config/hypr/scripts/hyprshade.sh
