--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -4,7 +4,7 @@
 #windowrulev2 = fullscreen, class:^(kitty)$
 windowrulev2 = fullscreen, class:^(whatsdesk)$
 windowrulev2 = fullscreen, class:^(.*telegram.*)$
-windowrulev2 = fullscreen, class:^(.*spotify.*)$
+windowrulev2 = fullscreen, class:^(.*Spotify.*)$
 windowrulev2 = fullscreen, class:^(.*Postman.*)$
 
 windowrulev2 = maximize, class:^(.*chrome.*)$
@@ -17,24 +17,24 @@ windowrulev2 = maximize, class:^(.*Nautilus)$
 # workspace 1
 $WORKSPACE=1
 windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$
-windowrulev2 = workspace $WORKSPACE, class:^(codium)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*codium)$
 
 # workspace 2
 $WORKSPACE=2
-windowrulev2 = workspace $WORKSPACE, class:^(Postman)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*Postman.*)$
 
 # workspace 3
 $WORKSPACE=3
-windowrulev2 = workspace $WORKSPACE, class:^(Brave-browser)$
+windowrulev2 = workspace $WORKSPACE, class:^(Brave.*)$
 
 
 # workspace 4
 $WORKSPACE=4
-windowrulev2 = workspace $WORKSPACE, class:^(google-chrome)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*chrome.*)$
 
 # workspace 5
 $WORKSPACE=5
-windowrulev2 = workspace $WORKSPACE, class:^(org.gnome.Nautilus)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*Nautilus)$
 
 
 # workspace 6
@@ -49,12 +49,12 @@ $WORKSPACE=7
 
 # workspace 8
 $WORKSPACE=8
-windowrulev2 = workspace $WORKSPACE, class:^(Spotify)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*Spotify.*)$
 
 # workspace 9
 $WORKSPACE=9
 windowrulev2 = workspace $WORKSPACE, class:^(whatsdesk)$
-windowrulev2 = workspace $WORKSPACE, class:^(org.telegram.desktop)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*telegram.*)$
 
 
 
