--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -223,3 +223,4 @@ bind = $mainMod, Tab, movefocus, r
 
 bind = $mainMod, K, layoutmsg, swapwithmaster master
 bind = $mainMod, W, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+#bind = $mainMod, J, 
