reglas para file chooser gtk

--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -1,5 +1,7 @@
 # reglas de ventana
 
+#windowrulev2 = float, class:^(.*.*)$
+
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^(kitty)$
 windowrulev2 = fullscreen, class:^(whatsdesk)$
@@ -12,6 +14,10 @@ windowrulev2 = maximize, class:^(Brave.*)$
 #windowrulev2 = maximize, class:^(jetbrains-.*)$
 windowrulev2 = maximize, class:^(.*codium)$
 windowrulev2 = maximize, class:^(.*Nautilus)$
+
+windowrulev2 = float, class:^(.*desktop-portal-gtk)$
+windowrulev2 = center, class:^(.*desktop-portal-gtk)$
+windowrulev2 = size 70% 85%, class:^(.*desktop-portal-gtk)$
 
 
 # workspace 1
@@ -68,6 +74,4 @@ $WORKSPACE=10
 windowrulev2 = noborder on, fullscreenstate:* 1
 
 
-
-#windowrule = maximize
 windowrule = focusonactivate
