--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -1,6 +1,8 @@
 # reglas de ventana
 
 #windowrulev2 = float, class:^(.*.*)$
+#windowrulev2 = minsize 50% 50%, class:^(.*.*)$
+#windowrulev2 = center, class:^(.*.*)$
 
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^(kitty)$
@@ -13,7 +15,7 @@ windowrulev2 = maximize, class:^(.*chrome.*)$
 windowrulev2 = maximize, class:^(Brave.*)$
 #windowrulev2 = maximize, class:^(jetbrains-.*)$
 windowrulev2 = maximize, class:^(.*codium)$
-windowrulev2 = maximize, class:^(.*Nautilus)$
+#windowrulev2 = maximize, class:^(.*Nautilus)$
 
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
 windowrulev2 = center, class:^(.*desktop-portal-gtk)$
