incorporacion de nuevos atajos de teclado para interactuar con el layout y atajos multiples

--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -109,6 +109,9 @@ unbind = , code:237
 
 # Applications
 bind = $mainMod, RETURN, exec, ~/.config/ml4w/settings/terminal.sh # Open the terminal
+bind = $mainMod SHIFT, RETURN, workspace, 10
+bind = $mainMod SHIFT, RETURN, exec, ~/.config/ml4w/settings/terminal.sh
+
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Open the filemanager
 
@@ -207,6 +210,7 @@ bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, P, pin
 bind = $mainMod, T, togglefloating # Alternar entre flotante y en mosaico
+bind = $mainMod, T, centerwindow
 bind = $mainMod, C, centerwindow
 #bind = $mainMod, J, cyclenext
 bind = $mainMod, ESCAPE, exit
@@ -214,13 +218,38 @@ bind = $mainMod, ESCAPE, exit
 bind = $mainMod, R, exec, hyprctl reload
 
 bind = $mainMod SHIFT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| xargs kill
-bind = $mainMod SHIFT, RETURN, exec, WGPU_BACKEND=gl warp-terminal
+#bind = $mainMod SHIFT, RETURN, exec, WGPU_BACKEND=gl warp-terminal
+
 
 # recordar cambiar la propiedad HandlePowerKey=ignore en /etc/systemd/logind.service y luego reiniciar systemd-logind.service
 bind = , XF86PowerOff, exec, wlogout
 
-bind = $mainMod, Tab, movefocus, r
-
-bind = $mainMod, K, layoutmsg, swapwithmaster master
 bind = $mainMod, W, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 #bind = $mainMod, J, 
+
+# layout msgs
+#bind = $mainMod, Tab, movefocus, r
+bind = $mainMod, K, layoutmsg, swapwithmaster master
+bind = $mainMod, Tab, layoutmsg, cyclenext
+bind = ALT, M, layoutmsg, focusmaster
+bind = ALT, up, layoutmsg, addmaster
+bind = ALT, down, layoutmsg, removemaster
+bind = ALT, right, layoutmsg, cyclenext
+bind = ALT, left, layoutmsg, cycleprev
+bind = ALT SHIFT, 1, layoutmsg, mfact exact 0.1
+bind = ALT SHIFT, 2, layoutmsg, mfact exact 0.2
+bind = ALT SHIFT, 3, layoutmsg, mfact exact 0.3
+bind = ALT SHIFT, 4, layoutmsg, mfact exact 0.4
+bind = ALT SHIFT, 5, layoutmsg, mfact exact 0.5
+bind = ALT SHIFT, 6, layoutmsg, mfact exact 0.6
+bind = ALT SHIFT, 7, layoutmsg, mfact exact 0.7
+bind = ALT SHIFT, 8, layoutmsg, mfact exact 0.8
+bind = ALT SHIFT, 9, layoutmsg, mfact exact 0.9
+bind = ALT SHIFT, 0, layoutmsg, mfact exact 1
+bind = ALT SHIFT, L, layoutmsg, orientationleft
+bind = ALT SHIFT, R, layoutmsg, orientationright
+bind = ALT SHIFT, C, layoutmsg, orientationcenter
+bind = ALT SHIFT, T, layoutmsg, orientationtop
+bind = ALT SHIFT, B, layoutmsg, orientationbottom
+bind = ALT, W, exec, killall waybar
+
