window rules para ventanas flotantes, se configura fullscreen por defecto en workspace 10

--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -4,6 +4,14 @@
 #windowrulev2 = minsize 50% 50%, class:^(.*.*)$
 #windowrulev2 = center, class:^(.*.*)$
 
+# maxsize de la ventana cuando esta en modo flotante
+windowrulev2 = minsize 800 600, floating:1
+windowrulev2 = maxsize 1500 800, floating:1
+windowrulev2 = center, floating:1
+
+#windowrulev2 = noanim, onworkspace:9
+#windowrulev2 = norounding, onworkspace:5
+
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^(kitty)$
 windowrulev2 = fullscreen, class:^(whatsdesk)$
@@ -52,6 +60,7 @@ $WORKSPACE=6
 
 # workspace 7
 $WORKSPACE=7
+windowrulev2 = float, onworkspace:$WORKSPACE
 
 
 
@@ -69,7 +78,7 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*telegram.*)$
 # workspace 10
 $WORKSPACE=10
 #windowrulev2 = workspace $WORKSPACE, class:^(kitty)$
-
+windowrulev2 = fullscreen, onworkspace:$WORKSPACE
 
 
 # bordes
