se eliminan cambios de orientacion segun workpace y se configura el workspace 10 para usarse con la terminal

--- a/compositors/hyprland/dotfiles/hypr/conf/workspaces/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/workspaces/default.conf
@@ -5,12 +5,12 @@ $WORKSPACE=1
 workspace = $WORKSPACE, gapsin:0, gapsout:0
 workspace = $WORKSPACE, name:ide
 workspace = $WORKSPACE, defaultName:ide
-workspace = $WORKSPACE, layoutopt:orientation:top
+#workspace = $WORKSPACE, layoutopt:orientation:top
 #workspace = $WORKSPACE, decorate:false
 
 # workspace 2
 $WORKSPACE=2
-workspace = $WORKSPACE, layoutopt:orientation:top
+#workspace = $WORKSPACE, layoutopt:orientation:top
 
 
 # workspace 3
@@ -25,7 +25,7 @@ $WORKSPACE=4
 
 # workspace 5
 $WORKSPACE=5
-workspace = $WORKSPACE, layoutopt:orientation:center
+#workspace = $WORKSPACE, layoutopt:orientation:center
 #workspace = $WORKSPACE, f[1]
 
 
@@ -39,11 +39,8 @@ $WORKSPACE=6
 $WORKSPACE=7
 
 
-
 # workspace 8
 $WORKSPACE=8
-
-
 
 # workspace 9
 $WORKSPACE=9
@@ -60,11 +57,11 @@ workspace = $WORKSPACE, rounding:false
 
 # workspace 10
 $WORKSPACE=10
-workspace = $WORKSPACE, layoutopt:orientation:top
+#workspace = $WORKSPACE, layoutopt:orientation:top
 workspace = $WORKSPACE, name:terminal
 workspace = $WORKSPACE, defaultName:terminal
-workspace = $WORKSPACE, border:false
-workspace = $WORKSPACE, shadow:false
-workspace = $WORKSPACE, decorate:false
+workspace = $WORKSPACE, border:true
+workspace = $WORKSPACE, shadow:true
+workspace = $WORKSPACE, decorate:true
 workspace = $WORKSPACE, rounding:false
 workspace = $WORKSPACE, gapsin:0, gapsout:0
