atajos de teclado mas especificos y un nuevo script python para verificar si la terminal esta operativa en un workspace determinado

--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -202,7 +202,7 @@ bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
 bind = $mainMod, F2, exec, postman
 bind = $mainMod, F3, exec, binance
-bind = $mainMod, F7, exec, telegram-desktop
+bind = $mainMod SHIFT, F9, exec, telegram-desktop
 bind = $mainMod, F8, exec, spotify
 bind = $mainMod, F9, exec, whatsdesk
 bind = $mainMod SHIFT, B, exec, brave
@@ -217,7 +217,7 @@ bind = $mainMod, ESCAPE, exit
 #bind = $mainMod, R, forcerendererreload
 bind = $mainMod, R, exec, hyprctl reload
 
-bind = $mainMod SHIFT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| xargs kill
+bind = ALT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| xargs kill
 #bind = $mainMod SHIFT, RETURN, exec, WGPU_BACKEND=gl warp-terminal
 
 
@@ -225,31 +225,36 @@ bind = $mainMod SHIFT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| 
 bind = , XF86PowerOff, exec, wlogout
 
 bind = $mainMod, W, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
-#bind = $mainMod, J, 
 
 # layout msgs
 #bind = $mainMod, Tab, movefocus, r
 bind = $mainMod, K, layoutmsg, swapwithmaster master
 bind = $mainMod, Tab, layoutmsg, cyclenext
+
+bind = $mainMod SHIFT, M, layoutmsg, focusmaster
+bind = $mainMod SHIFT, M, fullscreen, 1
+
+bind = $mainMod SHIFT, F, layoutmsg, focusmaster
+bind = $mainMod SHIFT, F, fullscreen, 0
+
+bind = $mainMod, HOME, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e btop
+bind = $mainMod, END, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e pacseek
+bind = $mainMod, NEXT, layoutmsg, cyclenext
+bind = $mainMod, PRIOR, layoutmsg, cycleprev
+
 bind = ALT, M, layoutmsg, focusmaster
 bind = ALT, up, layoutmsg, addmaster
 bind = ALT, down, layoutmsg, removemaster
-bind = ALT, right, layoutmsg, cyclenext
-bind = ALT, left, layoutmsg, cycleprev
-bind = ALT SHIFT, 1, layoutmsg, mfact exact 0.1
-bind = ALT SHIFT, 2, layoutmsg, mfact exact 0.2
-bind = ALT SHIFT, 3, layoutmsg, mfact exact 0.3
-bind = ALT SHIFT, 4, layoutmsg, mfact exact 0.4
+bind = ALT, W, exec, killall waybar
+
 bind = ALT SHIFT, 5, layoutmsg, mfact exact 0.5
 bind = ALT SHIFT, 6, layoutmsg, mfact exact 0.6
 bind = ALT SHIFT, 7, layoutmsg, mfact exact 0.7
-bind = ALT SHIFT, 8, layoutmsg, mfact exact 0.8
-bind = ALT SHIFT, 9, layoutmsg, mfact exact 0.9
-bind = ALT SHIFT, 0, layoutmsg, mfact exact 1
+bind = ALT SHIFT, right, layoutmsg, mfact +0.05
+bind = ALT SHIFT, left, layoutmsg, mfact -0.05
+
 bind = ALT SHIFT, L, layoutmsg, orientationleft
 bind = ALT SHIFT, R, layoutmsg, orientationright
 bind = ALT SHIFT, C, layoutmsg, orientationcenter
 bind = ALT SHIFT, T, layoutmsg, orientationtop
 bind = ALT SHIFT, B, layoutmsg, orientationbottom
-bind = ALT, W, exec, killall waybar
-
