--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -8,6 +8,7 @@
 windowrulev2 = minsize 800 600, floating:1
 windowrulev2 = maxsize 1500 800, floating:1
 windowrulev2 = center, floating:1
+#windowrulev2 = focusonactivate, floating:1
 
 #windowrulev2 = noanim, onworkspace:9
 #windowrulev2 = norounding, onworkspace:5
@@ -48,6 +49,8 @@ windowrulev2 = workspace $WORKSPACE, class:^(Brave.*)$
 $WORKSPACE=4
 windowrulev2 = workspace $WORKSPACE, class:^(.*chrome.*)$
 
+
+
 # workspace 5
 $WORKSPACE=5
 windowrulev2 = workspace $WORKSPACE, class:^(.*Nautilus)$
@@ -83,6 +86,3 @@ windowrulev2 = fullscreen, onworkspace:$WORKSPACE
 
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
-
-
-windowrule = focusonactivate
