mejora en python scripts

--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -111,7 +111,7 @@ unbind = , code:237
 bind = $mainMod, RETURN, exec, ~/.config/ml4w/settings/terminal.sh
 
 bind = $mainMod SHIFT, RETURN, workspace, 10
-bind = $mainMod SHIFT, RETURN, exec, python3 ~/manjaro-personal-setup/compositors/hyprland/scripts/check_workspace_terminal.py 10
+bind = $mainMod SHIFT, RETURN, exec, ~/manjaro-personal-setup/compositors/hyprland/scripts/python/check_workspace_terminal 10
 
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Open the filemanager
