--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -35,6 +35,7 @@ windowrulev2 = size 70% 85%, class:^(.*desktop-portal-gtk)$
 $WORKSPACE=1
 windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$
 windowrulev2 = workspace $WORKSPACE, class:^(.*codium)$
+#windowrulev2 = opaque, onworkspace:$WORKSPACE
 
 # workspace 2
 $WORKSPACE=2
@@ -82,6 +83,7 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*telegram.*)$
 $WORKSPACE=10
 #windowrulev2 = workspace $WORKSPACE, class:^(kitty)$
 windowrulev2 = fullscreen, onworkspace:$WORKSPACE
+#windowrulev2 = noanim, onworkspace:$WORKSPACE
 
 
 # bordes
