--- a/compositors/hyprland/dotfiles/hypr/conf/custom.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/custom.conf
@@ -1,15 +1,15 @@
 # Source para cada carpeta
-source = animations.conf
+source = animation.conf
 source = autostart.conf
-source = decorations.conf
-source = environments.conf
+source = decoration.conf
+source = environment.conf
 source = keyboard.conf
-source = keybindings.conf
-source = layouts.conf
-source = monitors.conf
-source = plugins.conf
-source = windowrules.conf
-source = windows.conf
-source = workspaces.conf
+source = keybinding.conf
+source = layout.conf
+source = monitor.conf
+source = plugin.conf
+source = windowrule.conf
+source = window.conf
+source = workspace.conf
 source = misc.conf
 source = cursor.conf
