--- a/compositors/hyprland/dotfiles/waypaper/config.ini
+++ b/compositors/hyprland/dotfiles/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
-folder = ~/manjaro-personal-setup/compositors/hyprland/wallpapers
-wallpaper = ~/manjaro-personal-setup/compositors/hyprland/wallpapers/10.png
+folder = ~/exotic-os-setup/compositors/hyprland/wallpapers
+wallpaper = ~/wallpaper/default.jpg
 backend = hyprpaper
 monitors = All
 fill = fill
