change wallpaper and add waybar setup

--- a/compositors/hyprland/dotfiles/waypaper/config.ini
+++ b/compositors/hyprland/dotfiles/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/exotic-os-setup/compositors/hyprland/wallpapers
-wallpaper = ~/wallpaper/default.jpg
+wallpaper = ~/exotic-os-setup/compositors/hyprland/wallpapers/10.png
 backend = hyprpaper
 monitors = All
 fill = fill
