--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -1,109 +1,12 @@
 # Unbind all associated shortcuts to start with a clean configuration
 # Unbind all shortcuts to clean the configuration
 
+source = unbind.conf
+
 # SUPER KEY
 $mainMod = SUPER
 $HYPRSCRIPTS = ~/.config/hypr/scripts
 $SCRIPTS = ~/.config/ml4w/scripts
-
-# Applications
-unbind = $mainMod, RETURN
-unbind = $mainMod, B
-unbind = $mainMod, E
-unbind = $mainMod CTRL, E
-unbind = $mainMod CTRL, C
-
-# Windows
-unbind = $mainMod, Q
-unbind = $mainMod, F
-unbind = $mainMod, T
-unbind = $mainMod SHIFT, T
-unbind = $mainMod, J
-unbind = $mainMod, left
-unbind = $mainMod, right
-unbind = $mainMod, up
-unbind = $mainMod, down
-unbind = $mainMod, mouse:272
-unbind = $mainMod, mouse:273
-unbind = $mainMod SHIFT, right
-unbind = $mainMod, K
-
-# Actions
-unbind = $mainMod SHIFT, A
-unbind = $mainMod, PRINT
-unbind = $mainMod SHIFT, S
-unbind = $mainMod CTRL, Q
-unbind = $mainMod SHIFT, W
-unbind = $mainMod CTRL, W
-unbind = $mainMod ALT, W
-unbind = $mainMod CTRL, RETURN
-unbind = $mainMod CTRL, K
-unbind = $mainMod SHIFT, B
-unbind = $mainMod CTRL, B
-unbind = $mainMod SHIFT, R
-unbind = $mainMod, V
-unbind = $mainMod CTRL, T
-unbind = $mainMod CTRL, S
-unbind = $mainMod SHIFT, H
-unbind = $mainMod ALT, G
-unbind = $mainMod, Z
-
-# Workspaces
-unbind = $mainMod, 1
-unbind = $mainMod, 2
-unbind = $mainMod, 3
-unbind = $mainMod, 4
-unbind = $mainMod, 5
-unbind = $mainMod, 6
-unbind = $mainMod, 7
-unbind = $mainMod, 8
-unbind = $mainMod, 9
-unbind = $mainMod, 0
-
-unbind = $mainMod SHIFT, 1
-unbind = $mainMod SHIFT, 2
-unbind = $mainMod SHIFT, 3
-unbind = $mainMod SHIFT, 4
-unbind = $mainMod SHIFT, 5
-unbind = $mainMod SHIFT, 6
-unbind = $mainMod SHIFT, 7
-unbind = $mainMod SHIFT, 8
-unbind = $mainMod SHIFT, 9
-unbind = $mainMod SHIFT, 0
-
-unbind = $mainMod, Tab
-unbind = $mainMod SHIFT, Tab
-unbind = $mainMod CTRL, 1
-unbind = $mainMod CTRL, 2
-unbind = $mainMod CTRL, 3
-unbind = $mainMod CTRL, 4
-unbind = $mainMod CTRL, 5
-unbind = $mainMod CTRL, 6
-unbind = $mainMod CTRL, 7
-unbind = $mainMod CTRL, 8
-unbind = $mainMod CTRL, 9
-unbind = $mainMod CTRL, 0
-
-unbind = $mainMod, mouse_down
-unbind = $mainMod, mouse_up
-unbind = $mainMod CTRL, down
-
-# Fn keys
-unbind = , XF86MonBrightnessUp
-unbind = , XF86MonBrightnessDown
-unbind = , XF86AudioRaiseVolume
-unbind = , XF86AudioLowerVolume
-unbind = , XF86AudioMute
-unbind = , XF86AudioPlay
-unbind = , XF86AudioPause
-unbind = , XF86AudioNext
-unbind = , XF86AudioPrev
-unbind = , XF86AudioMicMute
-unbind = , XF86Calculator
-unbind = , XF86Lock
-unbind = , XF86Tools
-unbind = , code:238
-unbind = , code:237
 
 # DEFAULT, algunas eliminadas y otras modificads
 
