improved keybindings and set default wallpaper

--- a/compositors/hyprland/dotfiles/hypr/hyprpaper.conf
+++ b/compositors/hyprland/dotfiles/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 preload = $HOME/.config/ml4w/assets/blank.png
-wallpaper = ,$HOME/.config/ml4w/assets/blank.png
-splash = false
+wallpaper = $HOME/exotic-os-setup/compositors/hyprland/wallpapers/10.png
+splash = true
