--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -15,15 +15,17 @@ windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 # default end
 
+# --------------------------------------------------------------------------------
+
 #windowrulev2 = float, class:^(.*.*)$
 #windowrulev2 = minsize 50% 50%, class:^(.*.*)$
 #windowrulev2 = center, class:^(.*.*)$
+windowrulev2 = focusonactivate, class:^(.*.*)$
 
 # maxsize de la ventana cuando esta en modo flotante
 windowrulev2 = minsize 700 500, floating:1
 windowrulev2 = maxsize 1400 800, floating:1
 windowrulev2 = center, floating:1
-#windowrulev2 = focusonactivate, floating:1
 
 #windowrulev2 = noanim, onworkspace:9
 #windowrulev2 = norounding, onworkspace:5
