terminal general movida a workspace special

--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -113,16 +113,17 @@ unbind = ALT SHIFT, B
 $mainMod = SUPER
 $HYPRSCRIPTS = ~/.config/hypr/scripts
 $SCRIPTS = ~/.config/ml4w/scripts
+$ML4W_SETTINGS = ~/.config/ml4w/settings
+$TERMINAL = $(cat $ML4W_SETTINGS/terminal.sh)
 
 # DEFAULT, algunas eliminadas y otras modificads
 
 # Applications
-bind = $mainMod, RETURN, exec, ~/.config/ml4w/settings/terminal.sh
+bind = $mainMod SHIFT, RETURN, exec, $ML4W_SETTINGS/terminal.sh
+bind = $mainMod, RETURN, togglespecialworkspace
 
-bind = $mainMod SHIFT, RETURN, exec, python3 ~/exotic-os-setup/compositors/hyprland/scripts/python/check_workspace_terminal.py 10
-
-bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Open the browser
-bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Open the filemanager
+bind = $mainMod, B, exec, $ML4W_SETTINGS/browser.sh # Open the browser
+bind = $mainMod, E, exec, $ML4W_SETTINGS/filemanager.sh # Open the filemanager
 
 
 # Windows
@@ -196,8 +197,8 @@ bind = , XF86AudioPause, exec, playerctl pause # Audio pause
 bind = , XF86AudioNext, exec, playerctl next # Audio next
 bind = , XF86AudioPrev, exec, playerctl previous # Audio previous
 bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle # Toggle microphone
-bind = , XF86Calculator, exec, ~/.config/ml4w/settings/calculator.sh # Open calculator
-bind = , XF86Tools, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
+bind = , XF86Calculator, exec, $ML4W_SETTINGS/calculator.sh # Open calculator
+bind = , XF86Tools, exec, $TERMINAL --class dotfiles-floating -e ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 
 bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10
 bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10- 
@@ -246,8 +247,8 @@ bind = $mainMod SHIFT, M, fullscreen, 1
 bind = $mainMod SHIFT, F, layoutmsg, focusmaster
 bind = $mainMod SHIFT, F, fullscreen, 0
 
-bind = $mainMod, HOME, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e btop
-bind = $mainMod, END, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e pacseek
+bind = $mainMod, HOME, exec, $TERMINAL --class dotfiles-floating -e btop
+bind = $mainMod, END, exec, $TERMINAL --class dotfiles-floating -e pacseek
 bind = $mainMod, NEXT, layoutmsg, cyclenext
 bind = $mainMod, PRIOR, layoutmsg, cycleprev
 
