--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -102,5 +102,11 @@ windowrulev2 = fullscreen, onworkspace:$WORKSPACE
 #windowrulev2 = noanim, onworkspace:$WORKSPACE
 
 
+
+# workspace special
+$WORKSPACE=special:special
+windowrulev2 = fullscreen, onworkspace:name:$WORKSPACE
+windowrulev2 = opaque, onworkspace:$WORKSPACE
+
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
