--- a/compositors/hyprland/dotfiles/hypr/conf/workspaces/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/workspaces/default.conf
@@ -8,9 +8,11 @@ workspace = $WORKSPACE, defaultName:ide
 #workspace = $WORKSPACE, layoutopt:orientation:top
 
 
+
 # workspace 2
 $WORKSPACE=2
 #workspace = $WORKSPACE, layoutopt:orientation:top
+
 
 
 # workspace 3
@@ -39,8 +41,11 @@ $WORKSPACE=6
 $WORKSPACE=7
 
 
+
 # workspace 8
 $WORKSPACE=8
+
+
 
 # workspace 9
 $WORKSPACE=9
@@ -57,9 +62,12 @@ workspace = $WORKSPACE, rounding:false
 
 # workspace 10
 $WORKSPACE=10
-#workspace = $WORKSPACE, layoutopt:orientation:top
-workspace = $WORKSPACE, name:terminal
-workspace = $WORKSPACE, defaultName:terminal
+
+
+
+# workspace special
+$WORKSPACE=special:special
+workspace = $WORKSPACE, layoutopt:orientation:left
 workspace = $WORKSPACE, border:true
 workspace = $WORKSPACE, shadow:true
 workspace = $WORKSPACE, decorate:true
