--- a/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
@@ -36,3 +36,5 @@ exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
 #exec-once = /home/martin/.config/hypr/scripts/workspace_1_rules.sh &
 exec-once = hyprpm reload -n
 #exec = sh ~/.config/hypr/scripts/hyprshade.sh
+
+exec-once = [workspace special silent] $(cat $ML4W_SETTINGS/terminal.sh)
