cambios de setup de teclaso y workspaces

--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -123,7 +123,9 @@ bind = $mainMod SHIFT, RETURN, exec, $ML4W_SETTINGS/terminal.sh
 bind = $mainMod, RETURN, togglespecialworkspace
 
 bind = $mainMod, B, exec, $ML4W_SETTINGS/browser.sh # Open the browser
+
 bind = $mainMod, E, exec, $ML4W_SETTINGS/filemanager.sh # Open the filemanager
+bind = $mainMod SHIFT, E, exec, dolphin
 
 
 # Windows
@@ -211,11 +213,11 @@ bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -replace -i # Open a
 bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
 bind = $mainMod, F2, exec, postman
-bind = $mainMod, F3, exec, binance
 bind = $mainMod SHIFT, F9, exec, telegram-desktop
-bind = $mainMod, F8, exec, spotify
 bind = $mainMod, F9, exec, whatsdesk
+bind = $mainMod, F10, exec, spotify
 bind = $mainMod SHIFT, B, exec, brave
+
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, P, pin
