--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -70,7 +70,8 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*chrome.*)$
 
 # workspace 5
 $WORKSPACE=5
-windowrulev2 = workspace $WORKSPACE, class:^(.*Nautilus)$
+
+
 
 
 # workspace 6
@@ -86,7 +87,10 @@ windowrulev2 = float, onworkspace:$WORKSPACE
 
 # workspace 8
 $WORKSPACE=8
-windowrulev2 = workspace $WORKSPACE, class:^(.*Spotify.*)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*Nautilus)$
+windowrulev2 = workspace $WORKSPACE, class:^(.*dolphin)$
+
+
 
 # workspace 9
 $WORKSPACE=9
@@ -97,16 +101,15 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*telegram.*)$
 
 # workspace 10
 $WORKSPACE=10
-#windowrulev2 = workspace $WORKSPACE, class:^(kitty)$
-windowrulev2 = fullscreen, onworkspace:$WORKSPACE
-#windowrulev2 = noanim, onworkspace:$WORKSPACE
+windowrulev2 = workspace $WORKSPACE, class:^(.*Spotify.*)$
 
 
 
 # workspace special
 $WORKSPACE=special:special
 windowrulev2 = fullscreen, onworkspace:name:$WORKSPACE
-windowrulev2 = opaque, onworkspace:$WORKSPACE
+
+
 
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
