kitty en modo guake

--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -257,7 +257,7 @@ bind = $mainMod, PRIOR, layoutmsg, cycleprev
 bind = ALT, M, layoutmsg, focusmaster
 bind = ALT, up, layoutmsg, addmaster
 bind = ALT, down, layoutmsg, removemaster
-bind = ALT, W, exec, killall waybar
+bind = ALT, W, exec, killall waybar && pkill waybar
 
 bind = ALT SHIFT, 5, layoutmsg, mfact exact 0.5
 bind = ALT SHIFT, 6, layoutmsg, mfact exact 0.6
