--- a/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/windowrules/default.conf
@@ -20,7 +20,7 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 #windowrulev2 = float, class:^(.*.*)$
 #windowrulev2 = minsize 50% 50%, class:^(.*.*)$
 #windowrulev2 = center, class:^(.*.*)$
-windowrulev2 = focusonactivate, class:^(.*.*)$
+#windowrulev2 = focusonactivate, class:^(.*.*)$
 
 # maxsize de la ventana cuando esta en modo flotante
 windowrulev2 = minsize 700 500, floating:1
@@ -46,6 +46,8 @@ windowrulev2 = maximize, class:^(Brave.*)$
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
 #windowrulev2 = center, class:^(.*desktop-portal-gtk)$
 
+# bordes
+windowrulev2 = noborder on, fullscreenstate:* 1
 
 # workspace 1
 $WORKSPACE=1
@@ -108,8 +110,3 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*Spotify.*)$
 # workspace special
 $WORKSPACE=special:special
 windowrulev2 = fullscreen, onworkspace:name:$WORKSPACE
-
-
-
-# bordes
-windowrulev2 = noborder on, fullscreenstate:* 1
