--- a/compositors/hyprland/dotfiles/hypr/conf/workspaces/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/workspaces/default.conf
@@ -71,3 +71,4 @@ workspace = $WORKSPACE, shadow:true
 workspace = $WORKSPACE, decorate:true
 workspace = $WORKSPACE, rounding:false
 workspace = $WORKSPACE, gapsin:0, gapsout:0
+workspace = $WORKSPACE, on-created-empty: kitty
