--- a/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
@@ -37,4 +37,4 @@ exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
 exec-once = hyprpm reload -n
 #exec = sh ~/.config/hypr/scripts/hyprshade.sh
 
-exec-once = [workspace special silent] $(cat $ML4W_SETTINGS/terminal.sh)
+#exec-once = [workspace special silent] $(cat $ML4W_SETTINGS/terminal.sh)
