--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -270,3 +270,7 @@ bind = ALT SHIFT, R, layoutmsg, orientationright
 bind = ALT SHIFT, C, layoutmsg, orientationcenter
 bind = ALT SHIFT, T, layoutmsg, orientationtop
 bind = ALT SHIFT, B, layoutmsg, orientationbottom
+
+bind = ALT SHIFT, K, exec, $TERMINAL --class dotfiles-floating -e micro ~/hyprland-setup/dotfiles/hypr/conf/keybindings/default.conf
+bind = ALT SHIFT, W, exec, $TERMINAL --class dotfiles-floating -e micro ~/hyprland-setup/dotfiles/hypr/conf/windowrules/default.conf
+bind = ALT SHIFT, E, exec, $TERMINAL --class dotfiles-floating -e micro ~/hyprland-setup/dotfiles/hypr/conf/workspaces/default.conf
