mejoras varias y atajos nuevos

--- a/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/autostart.conf
@@ -34,7 +34,7 @@ exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
 
 # instalar socat
 #exec-once = /home/martin/.config/hypr/scripts/workspace_1_rules.sh &
-#exec-once = hyprpm reload -n
+exec-once = hyprpm reload -n
 #exec = sh ~/.config/hypr/scripts/hyprshade.sh
 
 #exec-once = [workspace special silent] $(cat $ML4W_SETTINGS/terminal.sh)
