add more unbinds

--- a/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/hypr/conf/keybindings/default.conf
@@ -108,6 +108,11 @@ unbind = ALT SHIFT, R
 unbind = ALT SHIFT, C
 unbind = ALT SHIFT, T
 unbind = ALT SHIFT, B
+unbind = $mainMod SHIFT, E
+unbind = ALT SHIFT, K
+unbind = ALT SHIFT, W
+unbind = ALT SHIFT, E
+
 
 # SUPER KEY
 $mainMod = SUPER
