fix keybinding file references

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/keybindings/default.conf
@@ -276,6 +276,6 @@ bind = ALT SHIFT, C, layoutmsg, orientationcenter
 bind = ALT SHIFT, T, layoutmsg, orientationtop
 bind = ALT SHIFT, B, layoutmsg, orientationbottom
 
-bind = ALT SHIFT, K, exec, $TERMINAL --class dotfiles-floating -e micro ~/hyprland-setup/dotfiles/hypr/conf/keybindings/default.conf
-bind = ALT SHIFT, W, exec, $TERMINAL --class dotfiles-floating -e micro ~/hyprland-setup/dotfiles/hypr/conf/windowrules/default.conf
-bind = ALT SHIFT, E, exec, $TERMINAL --class dotfiles-floating -e micro ~/hyprland-setup/dotfiles/hypr/conf/workspaces/default.conf
+bind = ALT SHIFT, K, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/keybindings/default.conf
+bind = ALT SHIFT, W, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/windowrules/default.conf
+bind = ALT SHIFT, E, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/workspaces/default.conf
