add custom window class

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/ml4w.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/ml4w.conf
@@ -117,3 +117,6 @@ env = APPIMAGELAUNCHER_DISABLE,1
 # Ozone
 env = OZONE_PLATFORM,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
+
+source = extra.conf
