add more keybindings

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/keybindings/default.conf
@@ -112,7 +112,7 @@ unbind = $mainMod SHIFT, E
 unbind = ALT SHIFT, K
 unbind = ALT SHIFT, W
 unbind = ALT SHIFT, E
-
+unbind = $mainMod SHIFT, L
 
 # SUPER KEY
 $mainMod = SUPER
@@ -216,6 +216,7 @@ bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10-
 # Shortcuts
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -replace -i # Open application launcher
 bind = $mainMod, L, exec, hyprlock # Lock screen
+bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiquarium
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
 bind = $mainMod, F2, exec, postman
 bind = $mainMod SHIFT, F9, exec, telegram-desktop
